update button word-break and remove anchorlinks in search_data_collector

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -72,6 +72,12 @@ h6 {
   position: relative;
 }
 
+.button {
+  white-space: normal;
+  word-break: break-word;
+  hyphens: auto;
+}
+
 .anchor-link {
   position: absolute;
 
