--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,23 +1,14 @@
-<footer class="footer has-background-inherit">
-    <div class="container">
-        {%- if site.footer_menu -%}
-            <div class="columns is-multiline is-centered">
-                {%- for item in site.data[site.footer_menu] -%}
-                    <div class="column has-text-centered">
-                        <div style="hyphens: manual;" class="has-text-centered">
-                            <a href="{{ item.link | relative_url }}">{{ item.name }}</a>
-                        </div>
-                    </div>
-                {%- endfor -%}
-            </div>
-        {%- endif -%}
-    </div>
+<footer class="footer has-background-inherit mt-0 pt-0">
+    {%- if site.footer_menu -%}
+        <p class="has-text-centered is-small">
+            {%- for item in site.data[site.footer_menu] -%}
+                <a href="{{ item.link | relative_url }}">{{ item.name }}</a>
+                {%- unless forloop.last -%}
+                    <span> | </span>
+                {%- endunless -%}
+            {%- endfor -%}
+        </p>
+    {%- endif -%}
 
-    <div class="container">
-        <div class="columns is-multiline is-centered">
-            <div class="column has-text-centered is-small">
-                <p class="has-text-centered is-small">This site does not use cookies or analytic tools requiring you to consent or define allowed services. For our privacy notice, see the links above.</p>
-            </div>
-        </div>
-    </div>
+    <p class="has-text-centered is-small">This site does not use cookies or analytic tools requiring you to consent or define allowed services. For our privacy notice, see the links above.</p>
 </footer>
