--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -359,7 +359,7 @@
   }
 
   html.loaded::before {
-    background-image: url("/assets/images/background, vietnam golden bridge sketch light compressed.jpg");
+    background-image: url("/assets/images/set-outlooksignatures logo background.png");
   }
 
   /* Define a new class for dark mode background. This class will be added and removed by JavaScript. */
