--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -363,13 +363,13 @@
 
     /* Keep existing background properties for the image within this smaller box */
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
 
     /* Keep other properties */
     pointer-events: none;
     z-index: -2;
-    opacity: 0.6;
+    opacity: 0.1;
     filter: var(--bg-filter, none);
   }
 
