--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -8,12 +8,12 @@
             <p>
                 {% if page.hero_link %}
                     <div class="buttons my-4">
-                        <a href="{{ page.hero_link }}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link_style -}}>{{- page.hero_link_text -}}</a>
+                        <a href="{{- page.hero_link -}}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{- page.hero_link_style -}}>{{- page.hero_link_text -}}</a>
                 {% if page.hero_link2 %}
-                        <a href="{{ page.hero_link2 }}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link2_style -}}>{{- page.hero_link2_text -}}</a>
+                        <a href="{{- page.hero_link2 -}}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{- page.hero_link2_style -}}>{{- page.hero_link2_text -}}</a>
                 {% endif %}
                 {% if page.hero_link3 %}
-                        <a href="{{ page.hero_link3 }}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link3_style -}}>{{- page.hero_link3_text -}}</a>
+                        <a href="{{- page.hero_link3 -}}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{- page.hero_link3_style -}}>{{- page.hero_link3_text -}}</a>
                 {% endif %}
                     </div>
             {% endif %}
