--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -4,18 +4,17 @@
     <div class="hero-body {% if page.hero_darken %} hero-darken {% endif %}">
         <div class="container">
             <h1 class="title is-2">{{ page.title }}</h1>
-            <p class="subtitle is-4">{{ page.subtitle }}
-            <p>
-                {% if page.hero_link %}
-                    <div class="buttons my-4">
-                        <a href="{{- page.hero_link -}}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{- page.hero_link_style -}}>{{- page.hero_link_text -}}</a>
+            <p class="subtitle is-4">{{ page.subtitle }}</p>
+            {% if page.hero_link %}
+                <div class="buttons my-4">
+                <a href="{{ page.hero_link }}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link_style }}>{{ page.hero_link_text }}</a>
                 {% if page.hero_link2 %}
-                        <a href="{{- page.hero_link2 -}}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{- page.hero_link2_style -}}>{{- page.hero_link2_text -}}</a>
+                    <a href="{{ page.hero_link2 }}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link2_style }}>{{ page.hero_link2_text }}</a>
                 {% endif %}
                 {% if page.hero_link3 %}
-                        <a href="{{- page.hero_link3 -}}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{- page.hero_link3_style -}}>{{- page.hero_link3_text -}}</a>
+                    <a href="{{ page.hero_link3 }}" class="button is-link is-normal is-hovered has-text-black has-text-left" {{ page.hero_link3_style }}>{{ page.hero_link3_text }}</a>
                 {% endif %}
-                    </div>
+                </div>
             {% endif %}
         </div>
     </div>
