refactor: remove noscript bot tracking
refactor: when a link is a download, do not add link tracking classes

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -39,7 +39,7 @@
 <noscript>
   <p>
     <img referrerpolicy="no-referrer-when-downgrade"
-      src='//mtrcs.set-outlooksignatures.com/poop.php?idsite=1&amp;bots=1&amp;rec=1&amp;action_name=page_view&amp;url={{ site.url }}{{ page.url | relative_url }}&amp;rand={{ "now" | date: "%s" }}&amp;apiv=1'
+      src='//mtrcs.set-outlooksignatures.com/poop.php?idsite=1&rec=1&action_name=page_view&url={{ site.url }}{{ page.url | relative_url }}&rand={{ "now" | date: "%s" }}&apiv=1'
       style="border:0;" alt="" />
   </p>
 </noscript>
