update mtrcs code

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -20,7 +20,7 @@
   (
     function () {
       var u = "//mtrcs.set-outlooksignatures.com/";
-      _paq.push(["setTrackerUrl", u + "poop.php"]);
+      _paq.push(["setTrackerUrl", u + "mtrcs.php"]);
       _paq.push(["setSiteId", "1"]);
       var d = document;
       g = d.createElement("script");
@@ -28,7 +28,7 @@
       g.type = "text/javascript";
       g.async = true;
       g.defer = true;
-      g.src = u + "poop.js";
+      g.src = u + "mtrcs.js";
       s.parentNode.insertBefore(g, s);
     }
   )();
@@ -39,7 +39,7 @@
 <noscript>
   <p>
     <img referrerpolicy="no-referrer-when-downgrade"
-      src='//mtrcs.set-outlooksignatures.com/poop.php?idsite=1&rec=1&action_name=page_view&url={{ site.url }}{{ page.url | relative_url }}&rand={{ "now" | date: "%s" }}&apiv=1'
+      src='//mtrcs.set-outlooksignatures.com/mtrcs.php?idsite=1&rec=1&action_name=page_view&url={{ site.url }}{{ page.url | relative_url }}&rand={{ "now" | date: "%s" }}&apiv=1'
       style="border:0;" alt="" />
   </p>
 </noscript>
