--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -10,7 +10,7 @@
   _paq.push(["setCookieDomain", "*.set-outlooksignatures.com"]);
   _paq.push(["setDomains", ["*.set-outlooksignatures.com"]]);
   _paq.push(['enableHeartBeatTimer']);
-  _paq.push(['setLinkClasses', ["mtrcs-external-link", "mtrcs-internal-link"]]);
+  _paq.push(['setLinkClasses', ["mtrcs-external-link"]]);
   _paq.push(['setDownloadClasses', ["mtrcs-download"]]);
   _paq.push(['trackPageView']);
   _paq.push(['trackVisibleContentImpressions', true]);
