--- a/_includes/header.html
+++ b/_includes/header.html
@@ -60,23 +60,31 @@
 
             <div class="navbar-end">
                 <a class="navbar-item has-text-white" href="/search" aria-label="Search">
-                    <span>🔍︎ {{ site.data[site.active_lang].strings.search }}</span>
+                    <span>🔍︎&nbsp;{{ site.data[site.active_lang].strings.search }}</span>
                 </a>
 
-                <div class="navbar-item has-text-white" id="language-switcher">
-                    <span>
-                        🌐
+                <div class="navbar-item has-dropdown is-hoverable {% if site.fixed_navbar == 'bottom' %} has-dropdown-up {% endif %}" id="language-switcher">
+                    <a class="navbar-link has-text-white">
+                        🌐&nbsp;
                         {%- assign page_path_without_anchor = page.url | split: '#' | first -%}
+                        {%- assign active_tongue = site.active_lang -%}
+                        {{ active_tongue | upcase }}
+                    </a>
+
+                    <div class="navbar-dropdown">
                         {%- for tongue in site.languages -%}
-                        <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %}
-                            class="has-text-white" {% static_href
-                            %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"
-                            {% endstatic_href %}
-                            data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
-                            {{ tongue }}
-                        </a>{% if forloop.last == false %}{{ " | " }}{% endif %}
+                            {%- assign link_url = "" -%}
+                            {%- if tongue == site.default_lang -%}
+                                {%- assign link_url = site.baseurl | append: page.url -%}
+                            {%- else -%}
+                                {%- assign link_url = site.baseurl | append: "/" | append: tongue | append: page.url -%}
+                            {%- endif -%}
+                            <a class="navbar-item has-text-white {% if tongue == site.active_lang %}is-active{% endif %}" {% static_href
+                                %}href="{{ link_url }}" {% endstatic_href %} data-base-url="{{ link_url }}">
+                                {{ tongue | upcase }}
+                            </a>
                         {%- endfor -%}
-                    </span>
+                    </div>
                 </div>
 
                 {% if site.gh_sponsor and page.hide_gh_sponsor != true%}
