refactor: compress background logo

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -377,7 +377,7 @@
   }
 
   html.loaded::before {
-    background-image: url("/assets/images/set-outlooksignatures logo background.png");
+    background-image: url("/assets/images/set-outlooksignatures logo background compressed.png");
   }
 
   /* Define a new class for dark mode background. This class will be added and removed by JavaScript. */
