--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -186,33 +186,41 @@ html::after {
 
 .button {
   cursor: pointer;
+
+  /* Optimization Hints to force immediate animation calculation */
+  will-change: transform, filter, box-shadow;
+  animation-play-state: running; /* Explicitly set the animation to run */
+
+  /* Base Animation Properties */
   animation-name: pulse;
   animation-duration: 5s; /* The mandatory 5000ms cycle time */
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
 }
 
-/* Groups 1, 6, 11, 16 (A=5, B=1) */
+/* 1s Stagger Groups (5 buttons per group, as the delay wraps around the 5s duration) */
+
+/* Buttons 1, 6, 11, 16 */
 .button:nth-child(5n + 1) {
   animation-delay: 0s;
 }
 
-/* Groups 2, 7, 12, 17 (A=5, B=2) */
+/* Buttons 2, 7, 12, 17 */
 .button:nth-child(5n + 2) {
   animation-delay: 1s;
 }
 
-/* Groups 3, 8, 13, 18 (A=5, B=3) */
+/* Buttons 3, 8, 13, 18 */
 .button:nth-child(5n + 3) {
   animation-delay: 2s;
 }
 
-/* Groups 4, 9, 14, 19 (A=5, B=4) */
+/* Buttons 4, 9, 14, 19 */
 .button:nth-child(5n + 4) {
   animation-delay: 3s;
 }
 
-/* Groups 5, 10, 15, 20 (A=5, B=5) */
+/* Buttons 5, 10, 15, 20 */
 .button:nth-child(5n + 5) {
   animation-delay: 4s;
 }
